data/derived/comb/progs/unify/prog7545.ml.out
Characters 83-87:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c
